# os-2024

./: .all-contributorsrc  .buildinfo  .copier-config.yaml  .copier-docker-config.yaml  .copierignore  .envrc  .gitignore  .tasks-extra.toml  .tasks.toml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ad sa  book  codecov.yml  dialogue.html  genindex.html  index.html  index.md  objects.inv  pyproject.toml  search.html  searchindex.js
.docker/: Dockerfile.app  Dockerfile.base  docker-compose.app.yaml  docker.app.env  docker.base.env  docker.common.env
.docker/.docker-scripts/: docker-compose.sh
.docker/.ids/: admin.env  app.env  default.env
.docker/scripts/: launch.sh  sshd_config
.github/: dependabot.yaml
.github/scripts/: autotoc.py  contributors.py  generate_contributors.py  requirements.txt
.github/workflows/: contributors.yaml  contributors_report.yaml  deploy-app-image.yaml  deploy-base-image.yaml  deploy-docs.yaml  lint_and_test.yaml  release-test.yaml  release.yaml
202021029/: homework-w2
202121006/: hw-wk03.md  index.md
202221014/kv_store/: kv_store
202321017/: hw-wk04.md
_sources/: dialogue.md  index.md
_sources/about/: index.md
_sources/projects/: index.md  setup.md  tester.md
_sources/syllabus/: index.md
_sources/week01/: dialogue.md  dialogues.md  index.md  intro.md
_sources/week02/: chesh.md  cpu-api.md  cpu-intro.md  cpu-mechanisms.md  dialogue.md  index.md  lab.md  shells.md  tip.md
_sources/week03/: cpu-scheduling.md  hw-wk03.md  index.md  lab.md  lottery.md
_sources/week04/: index.md  lab-sched.md  lottery.md  summary.md
_sources/week05/: index.md  vm-api.md  vm-intro.md  vm-mechanism.md
_sources/week06/: vm-freespace.md  vm-segmentation.md
_sources/week07/: vm-paging.md  vm-tlbs.md
_sources/week10/: dialogue.md  index.md  threads-api.md
_sources/week11/: threads-locks.md
_sources/week12/: threads-cv.md
_sources/week13/: dialogue.md  file-devices.md
_sources/week14/: data-integrity.md  dialogue.md
about/: contributors.html  index.html
book/: _config.yml  _toc.yml  index.md  requirements.txt
docs/: index.html
draft/: dialogue.md
projects/: index.html  lab-tutorial.html  setup.html  tester.html
syllabus/: index.html
week01/: dialogue.html  dialogues.html  index.html  intro.html  session1.html  session2.html
week02/: chesh.html  cpu-api.html  cpu-intro.html  cpu-mechanisms.html  dialogue.html  hw-wk02.html  index.html  lab.html  processes.html  shells.html  tip.html
week03/: cpu-scheduling.html  hw-wk03.html  index.html  lab.html  lottery.html  mlfq.html  wsl-setup.html
week04/: dialogue.html  hw-wk04.html  index.html  lab-lottery.html  lab-sched.html  lottery.html  mlfq.html  summary.html
week05/: index.html  lab-linux-cmd.html  lab.html  tip-linux-cmd.html  vm-api.html  vm-intro.html  vm-mechanism.html
week06/: hw-wk06.html  index.html  lab.html  vm-freespace.html  vm-mechanism.html  vm-paging.html  vm-segmentation.html
week07/: hw-wk07.html  index.html  vm-freespace.html  vm-paging.html  vm-tlbs.html
week09/: dialogue.html  index.html  summary.html  vm-paging.html  vm-swap.html  vm-tlbs.html
week10/: dialogue.html  index.html  threads-api.html  threads-intro.html
week11/: index.html  threads-cv.html  threads-locks-usage.html  threads-locks.html
week12/: index.html  summary.html  threads-cv.html  threads-sema.html
week13/: dialogue.html  file-devices.html  file-directory.html  fs-implementation.html  index.html
week14/: data-integrity.html  dialogue.html  fs-implementation.html  index.html  summary.html
week15/: dialogue-summary.html  dialogue.html  dist-intro.html  index.html  summary.html
(+311 files in other folders)
