[tool.poetry]
name = "os2024"
version = "0.8.0"
description = "Operating Systems 2024 Class"
authors = ["Young Joon Lee <yj.lee@chu.ac.kr>"]
license = "CC-BY-4.0"
homepage = "https://os2024.halla.ai"
repository = "https://github.com/chu-aie/os-2024"
readme = "README.md"
packages = [{ include = "os2024", from = "src" }]

[tool.poetry.scripts]
os2024 = 'os2024.__cli__:main'

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
click = "^8.1.3"
jupyter-book = "^1.0.0"
docutils = "^0.20.1"
sphinx-inline-tabs = "^2023.4.21"
sphinx-examples = "^0.0.5"
sphinx-proof = "^0.1.3"
sphinx-hoverxref = "^1.3.0"
sphinxcontrib-youtube = "^1.4.1"
sphinxcontrib-video = "^0.2.0"
sphinx-thebe = "^0.3.1"
sphinxcontrib-mermaid = "^0.9.2"
sphinx-carousel = "^1.2.0"
sphinxcontrib-lastupdate = "^1.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.1"
isort = "^5.12.0"
black = ">=23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
flake8-pyproject = "^1.2.2"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.poe]
include = [".tasks.toml", ".tasks-extra.toml"]

[tool.black]
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  _version.py
  | .refs
  | .copier-template
  | tests
  | docs
  | book
  | _build
  | node_modules
)
'''

[tool.isort]
profile = "black"
skip = [
  '_version.py',
  'node_modules',
  '_build',
  'docs',
  'tests',
  'venv',
  '.copier-template',
  '.refs',
]

[tool.flake8]
ignore = ['F401', 'E501', 'W503']
exclude = [
  "node_modules",
  "_build",
  "docs",
  "tests",
  "venv",
  ".copier-template",
  ".refs",
  "src/ostep*",
]
per-file-ignores = ['__init__.py:F401', '_version.py:W292']

[tool.mypy]
namespace_packages = true
exclude = [
  "node_modules",
  "build",
  "_build",
  "dist",
  "docs",
  "tests",
  "venv",
  ".copier-template",
  ".refs",
]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.8"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider" # deactivating pytest caching.

[tool.coverage.report]
fail_under = 50
exclude_lines = ['if __name__ == "__main__":']

[tool.coverage.run]
omit = ['*/book/*']

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/os2024/_version.py:__version__"
version_source = "tag"
commit_version_number = true                                    # required for version_source = "tag"
commit_subject = "chore(release): :rocket: {version} [skip ci]"
prerelease_tag = "rc"
major_on_zero = true
tag_commit = true
changelog_file = "CHANGELOG.md"
upload_to_repository = true
upload_to_release = true
hvcs = "github"                                                 # hosting version control system, gitlab is also supported
build_command = "poetry build --no-cache"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
